--- a/index.html
+++ b/index.html
@@ -8,13 +8,38 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="header">
+    <div class="section-one">
         <h1>Header Logo</h1>
         <ul class="lists">
             <li><a href="#">header link one</a></li>
             <li><a href="#">header link two</a></li>
             <li><a href="#">header link three</a></li>
         </ul>
+        <h1>This website is awesome</h1>
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <button>Sign up</button>
+        <img src="#" alt="this is a placeholder for an image">
+    </div>
+    <div class="section-two">
+        <h1>Some random information.</h1>
+        <div class="container">
+            <div class="stuff">
+                <img src="#" alt="square image">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="stuff">
+                <img src="#" alt="square image">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="stuff">
+                <img src="#" alt="square image">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="stuff">
+                <img src="#" alt="square image">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
     </div>
 
 </body>
