created a specific header class in section-one of index.html

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <div class="section-one">
-        <h1>Header Logo</h1>
-        <ul class="lists">
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
-        </ul>
+        <div class="header">=
+            <h1>Header Logo</h1>
+            <ul class="lists">
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
         <h1>This website is awesome</h1>
         <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
         <button>Sign up</button>
@@ -45,6 +47,7 @@
         <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
         <p>Thor, God of Thunder</p>
     </div>
+    <div class="section-four"></div>
 
 </body>
 </html>
