--- a/index.html
+++ b/index.html
@@ -47,7 +47,14 @@
         <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
         <p>Thor, God of Thunder</p>
     </div>
-    <div class="section-four"></div>
+    <div class="section-four">
+        <h1>Call to action! It's time!</h1>
+        <p>sign up for our product by clicking that button right over there!</p>
+        <button>Sign up</button>
+    </div>
+    <div class="footer">
+        <p>Copyright ⓒ The Odin Project 2021</p>
+    </div>
 
 </body>
 </html>
