--- a/index.html
+++ b/index.html
@@ -6,21 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="section-one">
-        <div class="header">=
-            <h1>Header Logo</h1>
-            <ul class="lists">
+        <div class="header">
+            <div class="logo">
+                <h3>Header Logo</h3>
+            </div>
+            <ul class="links">
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
                 <li><a href="#">header link three</a></li>
             </ul>
         </div>
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-        <button>Sign up</button>
-        <img src="#" alt="this is a placeholder for an image">
+        <div class="awesome">
+            <div class="content">
+                <h1 class="cool">This website is awesome</h1>
+                <p class="cool-2">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button>Sign up</button>
+            </div>
+            <img src="#" alt="this is a placeholder for an image" class="img">
+        </div>
     </div>
     <div class="section-two">
         <h1>Some random information.</h1>
@@ -55,6 +64,5 @@
     <div class="footer">
         <p>Copyright ⓒ The Odin Project 2021</p>
     </div>
-
 </body>
 </html>
