--- a/index.html
+++ b/index.html
@@ -13,53 +13,61 @@
 <body>
     <div class="section-one">
         <div class="header">
-            <div class="logo">
+            <div class="left">
                 <h3>Header Logo</h3>
             </div>
-            <ul class="links">
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
-            </ul>
+            <div class="right">
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="awesome">
+        <div class="modal">
             <div class="content">
-                <h1 class="cool">This website is awesome</h1>
-                <p class="cool-2">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <div class="cool">This website is awesome</div>
+                <div class="par">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
                 <button>Sign up</button>
             </div>
-            <img src="#" alt="this is a placeholder for an image" class="img">
+            <img src="assets/GRMG8ZQZR-backdrop_wide.avif" alt="this is a placeholder for an image">
         </div>
     </div>
     <div class="section-two">
-        <h1>Some random information.</h1>
+        <div class="title">Some random information.</div>
         <div class="container">
             <div class="stuff">
-                <img src="#" alt="square image">
-                <p>this is some subtext under an illustration or image</p>
+                <div class="image"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="stuff">
-                <img src="#" alt="square image">
-                <p>this is some subtext under an illustration or image</p>
+                <div class="image"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="stuff">
-                <img src="#" alt="square image">
-                <p>this is some subtext under an illustration or image</p>
+                <div class="image"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="stuff">
-                <img src="#" alt="square image">
-                <p>this is some subtext under an illustration or image</p>
+                <div class="image"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
             </div>
         </div>
     </div>
     <div class="section-three">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p>Thor, God of Thunder</p>
+        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div class="thor">-Thor, God of Thunder</div>
     </div>
     <div class="section-four">
-        <h1>Call to action! It's time!</h1>
-        <p>sign up for our product by clicking that button right over there!</p>
-        <button>Sign up</button>
+        <div class="please">
+            <div class="action">
+                <h1 class="action">Call to action! It's time!</h1>
+                <div class="product">sign up for our product by clicking that button right over there!</div>
+            </div>
+            <div class="final">
+                <button>Sign up</button>
+            </div>
+        </div>
     </div>
     <div class="footer">
         <p>Copyright ⓒ The Odin Project 2021</p>
